2003-07-23  Ettore Perazzoli  <ettore@ximian.com>

	* subscribe-dialog.c: Converted to use EStorages instead of
	EvolutionStorages and the new MailComponent object.

	* mail.h: Nuked a bunch of stuff.  This will go away when I am
	done refactoring.

	* mail-offline-handler.c: Use the new MailComponent object.

	* mail-folder-cache.c, mail-folder-cache.h: Converted to use
	EStorages instead of EvolutionStorages.

	* mail-display.c: Use g_timeout and g_source functions instead of
	gtk_timeout functions.

	* mail-send-recv.c: Use g_timeout and g_source functions instead
	of gtk_timeout functions.
	(receive_update_got_store): Updated for the new mail_note_store().

	* mail-session.c: Use g_timeout and g_source functions instead of
	gtk_timeout functions.

	* mail-config-factory.c (factory): Removed.

	* folder-browser.c (folder_browser_destroy): Use GLib
	timeout/source functions instead of the deprecated GTK ones.
	(done_message_selected): Likewise.
	(folder_browser_gui_init): Protect against fb->search being NULL.

	* mail-account-gui.c (add_new_store): Use new MailComponent object
	and EStorages instead of EvolutionStorages.
	(mail_account_gui_save): Likewise.

	* mail-accounts.c (account_delete_clicked): Use new MailComponent
	object and EStorages instead of EvolutionStorages.
	(account_able_clicked): Likewise.
	(account_able_toggled): Likewise.

	* mail-autofilter.c: Use mail_component_peek_base_directory()
	instead of the evolution_dir global.
	* mail-callbacks.c: Likewise.
	* mail-config.c (uri_to_evname): Likewise.
	(mail_config_get_signature_list): Likewise.
	(delete_unused_signature_file): Likewise.
	* mail-display.c (mail_display_class_init): Likewise.
	* mail-importer.c (mail_importer_make_local_folder): Likewise.
	* mail-local.c (mlf_getv): Likewise.
	* mail-ops.c (uid_cachename_hack): Likewise.
	* mail-summary.c (generate_folder_summaries): Likewise.
	* mail-tools.c (mail_tool_get_local_inbox): Likewise.
	(mail_tools_folder_to_url): Likewise.